<resources>
    <string name="app_name">GreenFlag</string>
    <string name="create_account_button">Create an account</string>
    <string name="line1">GreenFlag customers can</string>
    <string name="line2">create an account to access</string>
    <string name="tick_line1">Car health updates</string>
    <string name="tick_line2">Request a rescue online</string>
    <string name="tick_line3">Policy information</string>
    <string name="email">Email address</string>
    <string name="password1">Create password</string>
    <string name="password2">Repeat password</string>
    <string name="hint">See criteria below</string>
    <string name="password_requirements1">Your password should have a minimum of 8</string>
    <string name="password_requirements2">characters and contain at least one</string>
    <string name="password_requirements3">number, one uppercase and one lower</string>
    <string name="password_requirements4">case letter. You can use special characters.</string>
    <string name="next">Next</string>
    <string name="error_email">An account already exists<br />for this email address</string>
    <string name="error_pwMatch">Your passwords don\'t match</string>
    <string name="error_pwInvalid">One of the passwords you entered wasn\'t valid</string>
</resources>