<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="410dp"
        android:layout_height="54dp"
        android:layout_marginEnd="1dp"
        android:background="@android:color/black"

        android:minHeight="?attr/actionBarSize"
        android:scrollbarSize="8dp"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/create_account_button"
        app:titleMargin="4dp"
        app:titleMarginStart="124dp"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="361dp"
        android:layout_height="39dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/email"
        android:textAlignment="gravity"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Email_Red"
        android:layout_width="376dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:backgroundTint="#A31111"
        android:textColor="#A31111"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/email_Green"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email_Green"
        android:layout_width="378dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:backgroundTint="#16A311"
        android:textColor="#16A311"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/Email_Red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/create_pass_red"
        android:layout_width="386dp"
        android:layout_height="65dp"
        android:layout_marginStart="12dp"
        android:background="@color/white"
        android:backgroundTint="#A31111"
        android:textColor="#A31111"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/create_pass_green"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/repeat_pswd_red"
        android:layout_width="387dp"
        android:layout_height="67dp"
        android:layout_marginStart="8dp"
        android:background="@color/white"
        android:backgroundTint="#A31111"
        android:textColor="#A31111"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/repeat_pass_green" />

    <TextView
        android:id="@+id/repeat_pass_green"
        android:layout_width="385dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:background="@color/white"
        android:backgroundTint="#16A311"
        android:textColor="#16A311"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/create_pass_green"
        android:layout_width="386dp"
        android:layout_height="70dp"
        android:layout_marginStart="12dp"
        android:background="@color/white"
        android:backgroundTint="#16A311"
        android:textColor="#16A311"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/email"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:layout_marginBottom="84dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="376dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:text="@string/password1"
        android:textAlignment="gravity"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/createPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/createPassword"
        android:layout_width="373dp"
        android:layout_height="52dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="361dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/password2"
        android:textAlignment="gravity"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/repeatPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="369dp"
        android:layout_height="51dp"
        android:layout_marginBottom="76dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/password_requirements1"
        android:textAlignment="inherit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/password_requirements4"
        android:textAlignment="inherit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_requirements2"
        android:textAlignment="inherit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="238dp"
        android:layout_height="19dp"
        android:layout_marginBottom="20dp"
        android:text="@string/password_requirements3"
        android:textAlignment="inherit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="343dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:alpha=".25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gradient_button_background"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/nextTextView"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nextButton" />

    <ImageView
        android:id="@+id/error3_email_already_exists"
        android:layout_width="255dp"
        android:layout_height="82dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/error3_email_already_exists" />

    <ImageView
        android:id="@+id/error2_passwords_dont_match"
        android:layout_width="252dp"
        android:layout_height="58dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_pswd_red"
        app:layout_constraintVertical_bias="-80.0"
        app:srcCompat="@drawable/error2_passwords_dont_match" />

    <ImageView
        android:id="@+id/error1_invalid_password"
        android:layout_width="256dp"
        android:layout_height="57dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_pswd_red"
        app:srcCompat="@drawable/error1_invalid_password" />

    <ImageView
        android:id="@+id/error4_invalid_email_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email"
        app:layout_constraintVertical_bias="0.965"
        app:srcCompat="@drawable/error4_invalid_email_2" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

    <ImageView
        android:id="@+id/email_green_tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/Email_Red"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/CP_green_tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/createPassword"
        app:layout_constraintTop_toTopOf="@+id/createPassword"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/RP_green_tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/repeatPassword"
        app:layout_constraintTop_toTopOf="@+id/repeatPassword"
        app:srcCompat="@drawable/tick" />


</androidx.constraintlayout.widget.ConstraintLayout>